--- a/.github/workflows/Build dataset.yml
+++ b/.github/workflows/Build dataset.yml
@@ -22,9 +22,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install and run lean-training-data
         run: |
-          git clone https://github.com/semorrison/lean-training-data.git;
-          curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- -y;
-          cd ./lean-training-data/;
-          $env:Path += ";~/.elan/bin";
-          lake exe cache get;
-          timeout 30 ./scripts/training_data.sh;
+          git clone https://github.com/semorrison/lean-training-data.git
+          curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- -y
+          cd ./lean-training-data/
+          export PATH=$PATH:~/.elan/bin
+          lake exe cache get
+          timeout 30 ./scripts/training_data.sh
