--- a/.github/workflows/Build dataset.yml
+++ b/.github/workflows/Build dataset.yml
@@ -29,6 +29,6 @@ jobs:
           echo "cache get"
           lake exe cache get
           echo "running script"
-          timeout 30 ./scripts/training_data.sh Mathlib.Logic.Hydra
+          ./scripts/training_data.sh Mathlib.Logic.Hydra
           echo "manually try thingy see what go bang"
-          parallel -j32 ./scripts/training_data.sh -- ::: `cat .lake/packages/mathlib/Mathlib.lean | sed -e 's/import //'`
+          ./scripts/training_data.sh
