--- a/.github/workflows/Build dataset.yml
+++ b/.github/workflows/Build dataset.yml
@@ -32,9 +32,13 @@ jobs:
           timeout 60 ./scripts/training_data.sh || true
           echo "uploading to hub"
           cd ..
+          echo "cloning"
           git clone https://SamPr:$HF_TOKEN@huggingface.co/datasets/SamPr/lean_training_data_test training_data_repo
+          echo "moving"
           mv ./lean-training-data/out/training_data ./training_data_repo/data
+          echo "commit"
           git commit -a -m "Automatic data update"
+          echo "push"
           git push https://SamPr:$HF_TOKEN@huggingface.co/datasets/SamPr/lean_training_data_test main
           echo "done upload"
           
